fix horizontal overflow

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,6 +5,7 @@
   flex-flow: row wrap;
   font-family: "Mulish","Helvetica Neue",Arial,sans-serif;
   height: 100vh;
+  overflow-x: hidden;
   overflow-y: scroll;
   scroll-snap-type: y proximity;
 }
@@ -80,6 +81,7 @@
 
 .photo {
   align-items: center;
+  box-sizing: border-box;
   display: flex;
   flex-flow: column;
   justify-content: center;
@@ -90,7 +92,7 @@
 
 .image {
   max-height: 90vh;
-  max-width: 90vw;
+  max-width: 90%;
 }
 
 .location {
